# cmake_gtest_example

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_main.cpp
mylibs/: foo.cpp  foo.h
